--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,12 @@
+0.04	11 July 2002
+	Upgraded test-suite to make it ready for Perl core inclusion (if that
+	ever happens).  Added check for PerlIO and EBCDIC also, by courtesy of
+	Jarkko Hietaniemi.
+
+	Rearranged top of source to not need fully qualified VERSION anymore.
+
+	Checked for defined() problems: none found.
+
 0.03	10 July 2002
 	Moved to the PerlIO::via namespace.
 
