Import of ELIZABETH/PerlIO-via-Base64-0.05 from CPAN.
gitpan-cpan-distribution: PerlIO-via-Base64
gitpan-cpan-version:      0.05
gitpan-cpan-path:         ELIZABETH/PerlIO-via-Base64-0.05.tar.gz
gitpan-cpan-author:       ELIZABETH
gitpan-cpan-maturity:     released

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,9 @@
+0.05	21 July 2002
+	Added import() method so that you can now specify the line ending mode
+	in the -use- statement.  Adapted test-suite accordingly.
+
+	Added "can_ok" check to test-suite.
+
 0.04	11 July 2002
 	Upgraded test-suite to make it ready for Perl core inclusion (if that
 	ever happens).  Added check for PerlIO and EBCDIC also, by courtesy of
