Import of ELIZABETH/PerlIO-via-Base64-0.06 from CPAN.
gitpan-cpan-distribution: PerlIO-via-Base64
gitpan-cpan-version:      0.06
gitpan-cpan-path:         ELIZABETH/PerlIO-via-Base64-0.06.tar.gz
gitpan-cpan-author:       ELIZABETH
gitpan-cpan-maturity:     released

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+0.06	13 August 2003
+	Cleaned up Makefile.PL and updated copright messaged.  Made sure the
+	test-suite runs under strict and warnings.
+
 0.05	21 July 2002
 	Added import() method so that you can now specify the line ending mode
 	in the -use- statement.  Adapted test-suite accordingly.
