--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+0.07    28 December 2003
+        Added automatic required modules update using Devel::Required.
+
 0.06	13 August 2003
 	Cleaned up Makefile.PL and updated copright messaged.  Made sure the
 	test-suite runs under strict and warnings.
