--- a/README
+++ b/README
@@ -4,11 +4,12 @@ PerlIO layer that handles automatic conversion from and to Base64 (MIME)
 format.  Intended to be used while opening a file with the ":via()" PerlIO
 layer.
 
-Copyright (c) 2002 Elizabeth Mattijsen <liz@dijkmat.nl>. All rights
+Copyright (c) 2002-2003 Elizabeth Mattijsen <liz@dijkmat.nl>. All rights
 reserved.  This program is free software; you can redistribute it and/or
 modify it under the same terms as Perl itself.
 
-The build is standard:
+Required Modules:
+ MIME::Base64 (any)
 
 perl Makefile.PL
 make
