Import of ELIZABETH/PerlIO-via-Base64-0.08 from CPAN.
gitpan-cpan-distribution: PerlIO-via-Base64
gitpan-cpan-version:      0.08
gitpan-cpan-path:         ELIZABETH/PerlIO-via-Base64-0.08.tar.gz
gitpan-cpan-author:       ELIZABETH
gitpan-cpan-maturity:     released

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,8 +1,18 @@
+0.08	5 April 2012
+	Made sure it runs with 5.14.2, threaded and unthreaded.  Some minor
+	pod tweaks.
+
+	7 August 2009
+	Brought up to date to 5.10.1 and to latest coding esthetics insights.
+
+	28 January 2004
+	Made sure the test-suite cleans up on multi-versioned systems.
+
 0.07    28 December 2003
         Added automatic required modules update using Devel::Required.
 
 0.06	13 August 2003
-	Cleaned up Makefile.PL and updated copright messaged.  Made sure the
+	Cleaned up Makefile.PL and updated copyright message.  Made sure the
 	test-suite runs under strict and warnings.
 
 0.05	21 July 2002
