--- a/README
+++ b/README
@@ -4,9 +4,12 @@ PerlIO layer that handles automatic conversion from and to Base64 (MIME)
 format.  Intended to be used while opening a file with the ":via()" PerlIO
 layer.
 
-Copyright (c) 2002-2003 Elizabeth Mattijsen <liz@dijkmat.nl>. All rights
+Copyright (c) 2002,2003,2009 Elizabeth Mattijsen <liz@dijkmat.nl>. All rights
 reserved.  This program is free software; you can redistribute it and/or
 modify it under the same terms as Perl itself.
+
+Version:
+ 0.08
 
 Required Modules:
  MIME::Base64 (any)
